# sincere-glacier-prc2025

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: METHODOLOGY.md
pipelines/: 01_train_gbm.py  02_train_lstm.py  03_gbm_inference.py  04_lstm_inference.py  05_lstm_oof.py  06_stacking_train.py  07_stacking_inference.py
src/fuel_prediction/: __init__.py  cli.py
src/fuel_prediction/config/: __init__.py  default.yaml  settings.py
src/fuel_prediction/data/: __init__.py  loader.py
src/fuel_prediction/features/: __init__.py  aggregations.py  physics.py
src/fuel_prediction/utils/: __init__.py  constants.py  logging.py  metrics.py
tests/: __init__.py  test_features.py  test_utils.py
